// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RapmPlayerDiagView RapmPlayerDiagView - should create snapshot 1`] = `
<span>
  <b>
    RAPM diagnostics for [
    Wiggins, Aaron
    ]:
  </b>
   adj_off=[
  <b>
    4.59
  </b>
  ], adj_def=[
  <b>
    -4.94
  </b>
  ] =
  <ul>
    <li>
      RAPM contribution: off=[
      <b>
        4.59
      </b>
      ], def=[
      <b>
        -4.48
      </b>
      ], total=[
      <b>
        9.06
      </b>
      ]
    </li>
    <ul>
      <li>
        To combat the tendency of RAPM to over-share the contribution of the strongest players amongst their typical team-mates, we take the weighted average player correlation (see "Player correlation table" in the Global Diagnostics below) [
        <b>
          1.09
        </b>
        ]
        <span>
           
          (hand-overwritten to 
          <b>
            0.50
          </b>
          )
        </span>
        , ...
      </li>
      <li>
        ... and use that % of the player's "Adj Rating+" ([
        <b>
          0.50
        </b>
        ]*[
        <b>
          4.00
        </b>
        ]) = [
        <b>
          2.00
        </b>
        ] as a prior in the RAPM calculation.
      </li>
      <ul>
        <li>
          <i>
            (Currently we only do this for offense because ORtg is a much more reliable individual stat than DRtg)
          </i>
        </li>
      </ul>
      <li>
        ie Off RAPM [
        <b>
          4.59
        </b>
        ] = Raw RAPM [
        <b>
          2.59
        </b>
        ] + Prior [
        <b>
          2.00
        </b>
        ]
      </li>
    </ul>
    <span>
      <li>
         + POST RAPM adjustment: off=[
        <b>
          0.00
        </b>
        ], def=[
        <b>
          -0.47
        </b>
        ], total=[
        <b>
          0.47
        </b>
        ]
      </li>
      <ul>
        <li>
          We calculate a team adjustment (off=[
          <b>
            -1991.44
          </b>
          ] def=[
          <b>
            1810.61
          </b>
          ]) to reduce/remove the the delta between total adjusted efficiency and RAPM (due to the regression factor): eg compare 
          <em>
            observed
          </em>
           (off=[
          <b>
            0.00
          </b>
          ] def=[
          <b>
            0.00
          </b>
          ]) vs 
          <em>
            derived solely from RAPM
          </em>
           (off=[
          <b>
            1991.44
          </b>
          ] def=[
          <b>
            -1810.61
          </b>
          ])
        </li>
        <ul>
          <li>
            <em>
              (includes an adjustment for low-volume players based on their "Adj Rtg+"s: off=[
              <b>
                0.00
              </b>
              ] def=[
              <b>
                0.00
              </b>
              ]).
            </em>
          </li>
        </ul>
        <span>
          <li>
            Then we calculate a player's contribution to this team total - currently this is a fraction of "Adj Rtg+": off=[
            <b>
              4.00
            </b>
            ] def=[
            <b>
              -4.00
            </b>
            ], ...
          </li>
          <li>
            ... chosen so that a minutes-weighted average of the ratings ([
            <b>
              82
              %
            </b>
            ] of [
            <b>
              101
            </b>
            ]) sums to the team value: off=[
            <b>
              0.00
            </b>
            ], def=[
            <b>
              -0.47
            </b>
            ]
          </li>
        </span>
      </ul>
    </span>
  </ul>
  (
  <b>
    More player diagnostics to come...
  </b>
  )
  <br />
  (
  <a
    href="#"
    onClick={[Function]}
  >
    Scroll to global RAPM diagnostics
  </a>
  )
</span>
`;

exports[`RapmUtils RapmUtils - buildPlayerContext 1`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
    "Player, Other",
    "Data, Dummy",
  ],
  "config": Object {
    "fixedRegression": -1,
    "priorMode": -1,
    "removalPct": 0,
  },
  "defLineupPoss": 944,
  "numLineups": 5,
  "numPlayers": 8,
  "offLineupPoss": 959,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Data, Dummy": 7,
    "Morsell, Darryl": 3,
    "Player, Other": 6,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "basis": Object {
      "def": -0.6000000000000001,
      "off": 0.6000000000000001,
    },
    "includeStrong": Object {},
    "keyUsed": "value",
    "noWeakPrior": false,
    "playersStrong": Array [
      Object {
        "def_ftr": 0.022550335570469794,
        "def_orb": -0.027619047619047623,
        "def_to": 0.025595027838051503,
        "off_2p": 0.04172956574224085,
        "off_2pmid": 0.012518869722672257,
        "off_2pmidr": 0.05146646441543039,
        "off_2prim": 0.029210696019568595,
        "off_2primr": 0.04103407297987017,
        "off_3p": 0.03686111640564609,
        "off_3pr": 0.1161472913159037,
        "off_adj_ppp": 5.1,
        "off_assist": 0.021251167739104137,
        "off_efg": 0.09702124035070998,
        "off_ftr": 0.041729565742240855,
        "off_orb": 0.043532338308457715,
        "off_to": 0.0333555703802535,
      },
      Object {
        "def_ftr": 0.024636871508379884,
        "def_orb": -0.019200000000000002,
        "def_to": 0.019292704601155806,
        "off_2p": 0.0584138963514174,
        "off_2pmid": 0.012668073907536303,
        "off_2pmidr": 0.0457458224438811,
        "off_2prim": 0.0457458224438811,
        "off_2primr": 0.08234248039898598,
        "off_3p": 0.03941178549011295,
        "off_3pr": 0.12245804777285092,
        "off_adj_ppp": 5.6,
        "off_assist": 0.07307601892958443,
        "off_efg": 0.1175315745865868,
        "off_ftr": 0.14920175935542757,
        "off_orb": 0.017276422764227643,
        "off_to": 0.03829078801331854,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -5.1,
        "off_adj_ppp": 5.1,
        "off_adj_ppp_alt": -20.264782871120424,
        "off_usage": 0.20864782871120427,
      },
      Object {
        "def_adj_ppp": -5.6,
        "off_adj_ppp": 5.6,
        "off_adj_ppp_alt": -24.4546350615718,
        "off_usage": 0.250546350615718,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
    ],
    "strongWeight": -1,
    "useRecursiveWeakPrior": false,
  },
  "removedPlayers": Object {},
  "unbiasWeight": 0,
}
`;

exports[`RapmUtils RapmUtils - buildPlayerContext 2`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
  ],
  "config": Object {
    "fixedRegression": -1,
    "priorMode": -1,
    "removalPct": 0.2,
  },
  "defLineupPoss": 944,
  "numLineups": 5,
  "numPlayers": 6,
  "offLineupPoss": 959,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Morsell, Darryl": 3,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "basis": Object {
      "def": -0.6000000000000001,
      "off": 0.6000000000000001,
    },
    "includeStrong": Object {},
    "keyUsed": "value",
    "noWeakPrior": false,
    "playersStrong": Array [
      Object {
        "def_ftr": 0.022550335570469794,
        "def_orb": -0.027619047619047623,
        "def_to": 0.025595027838051503,
        "off_2p": 0.04172956574224085,
        "off_2pmid": 0.012518869722672257,
        "off_2pmidr": 0.05146646441543039,
        "off_2prim": 0.029210696019568595,
        "off_2primr": 0.04103407297987017,
        "off_3p": 0.03686111640564609,
        "off_3pr": 0.1161472913159037,
        "off_adj_ppp": 5.1,
        "off_assist": 0.021251167739104137,
        "off_efg": 0.09702124035070998,
        "off_ftr": 0.041729565742240855,
        "off_orb": 0.043532338308457715,
        "off_to": 0.0333555703802535,
      },
      Object {
        "def_ftr": 0.024636871508379884,
        "def_orb": -0.019200000000000002,
        "def_to": 0.019292704601155806,
        "off_2p": 0.0584138963514174,
        "off_2pmid": 0.012668073907536303,
        "off_2pmidr": 0.0457458224438811,
        "off_2prim": 0.0457458224438811,
        "off_2primr": 0.08234248039898598,
        "off_3p": 0.03941178549011295,
        "off_3pr": 0.12245804777285092,
        "off_adj_ppp": 5.6,
        "off_assist": 0.07307601892958443,
        "off_efg": 0.1175315745865868,
        "off_ftr": 0.14920175935542757,
        "off_orb": 0.017276422764227643,
        "off_to": 0.03829078801331854,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
      Object {
        "def_ftr": 0,
        "def_orb": -0,
        "def_to": 0,
        "off_2p": 0,
        "off_2pmid": 0,
        "off_2pmidr": 0,
        "off_2prim": 0,
        "off_2primr": 0,
        "off_3p": 0,
        "off_3pr": 0,
        "off_adj_ppp": 0.6000000000000001,
        "off_assist": 0,
        "off_efg": 0,
        "off_ftr": 0,
        "off_orb": 0,
        "off_to": 0,
      },
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -5.1,
        "off_adj_ppp": 5.1,
        "off_adj_ppp_alt": -20.264782871120424,
        "off_usage": 0.20864782871120427,
      },
      Object {
        "def_adj_ppp": -5.6,
        "off_adj_ppp": 5.6,
        "off_adj_ppp_alt": -24.4546350615718,
        "off_usage": 0.250546350615718,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
        "off_adj_ppp_alt": 0.6000000000000001,
        "off_usage": 0,
      },
    ],
    "strongWeight": -1,
    "useRecursiveWeakPrior": false,
  },
  "removedPlayers": Object {
    "Data, Dummy": Array [
      0.05254860746190226,
      0,
      Object {
        "def_poss": Object {
          "value": 50,
        },
        "doc_count": 0,
        "key": "empty",
        "off_poss": Object {
          "value": 50,
        },
      },
    ],
    "Player, Other": Array [
      0.1576458223857068,
      0,
      Object {
        "def_poss": Object {
          "value": 150,
        },
        "doc_count": 0,
        "key": "empty",
        "off_poss": Object {
          "value": 150,
        },
      },
    ],
  },
  "unbiasWeight": 0,
}
`;
